Projet_GL/src/test/deca/syntax/invalid/unprovided/include_me2.deca
// include d'un script qui s'include lui-même

#include "include_me.deca"
